--- a/src/component/Carousel/carousel.scss
+++ b/src/component/Carousel/carousel.scss
@@ -80,3 +80,14 @@ body{
     border: #191970 2px solid;
     font-weight: bold;
 }
+
+.image{
+    border: #c5c6c9 2px solid;
+    padding: 5px;
+    -webkit-box-shadow: -1px 24px 34px 0px rgba(112,108,112,1);
+-moz-box-shadow: -1px 24px 34px 0px rgba(112,108,112,1);
+box-shadow: -1px 24px 34px 0px rgba(112,108,112,1);
+}
+.aboutspan{
+    font-size: 30px;
+}
